# LuminaV2

./: .gitignore  PAID_API_ANALYSIS.md  README.md  scalper.pine
bsc-analyzer/: .env.example  CMakeLists.txt  README.md  docker-compose.yml  requirements.txt  top.json  uuid
bsc-analyzer/backtest_results/: kol_dataset_90d.csv  kol_dataset_90d.parquet  kol_dataset_90d_full.csv  kol_dataset_90d_full.parquet  kol_dataset_90d_full_kol2plus.csv  kol_dataset_live.csv  kol_dataset_live.jsonl  paper_hits.csv
bsc-analyzer/backtest_results/Gold/: NARROWING_KOL_EDGE_REPORT.md  kol_backtest_1d.jsonl  kol_backtest_30d.jsonl  kol_backtest_30d_dedup.jsonl  kol_backtest_30d_latest.jsonl  kol_backtest_30d_recipients.jsonl  kol_backtest_30d_recipients_kol2plus.jsonl  kol_backtest_45d_20260328.jsonl  kol_backtest_45d_kol2plus.jsonl  kol_backtest_60d.jsonl  kol_backtest_60d_kol2plus.jsonl  kol_backtest_90d.jsonl  kol_backtest_merged.jsonl  kol_buys_yesterday.tsv  kol_count_gt2.jsonl  kol_count_gte3.jsonl  kol_dataset_live.csv  kol_dataset_live.jsonl  narrowing_phase1_analyze_backtest.txt  narrowing_phase2_slots_123.txt  narrowing_phase3_analyze_by_slot.txt  narrowing_phase4_kol_gte3_slots23.txt
bsc-analyzer/bench/: benchmark.cpp  kol_monitor.cpp  replay_fourmeme.cpp
bsc-analyzer/clickhouse/: schema.sql
bsc-analyzer/data/: deployers_fourmeme.csv
bsc-analyzer/data/lumina/: kol_swaps  kol_token_trades  token_features  token_labels  training_dataset
bsc-analyzer/draft/: README.md
bsc-analyzer/draft/ml/: backtest_block0.py  backtest_v2_kol_labels.py  check_entry_timing.py  compute_trades.py  enrich_trade_features.py  fetch_features.py  fetch_kol_swaps.py  fix_moralis_inflation.py  model_config.json  train_model.py  train_model_v2.py  train_model_v3.py
bsc-analyzer/draft/notebooks/: kol_backtest_analysis.ipynb
bsc-analyzer/draft/root/: kol_intelligence_map.html  note.txt  (+1 more)
bsc-analyzer/metadata/: lumina
bsc-analyzer/ml/: DATASET_LABEL_SPEC.md  FEATURE_PARITY.md  SHADOW_MODE.md  __init__.py  backtest_kol_strategy.py  backtest_results_90d.json  join_shadow_signals.py  kol_oof_predictions.csv  kol_oof_predictions_v2.csv  kol_oof_predictions_v3.csv  kol_scorer_config.json  kol_scorer_config_v2.json  kol_scorer_config_v3.json  kol_scorer_model.txt  kol_scorer_model_v2.txt  kol_scorer_model_v3.txt  label_live_data.py  model.pkl  model_v2.pkl  model_v3.pkl  research_90d_strategy.py  retrain_and_deploy.py  run_prelive_eval.sh  strategy_config_90d.json  train_kol_scorer.py  train_kol_scorer_v2.py  train_kol_scorer_v3.py
bsc-analyzer/scripts/: backtest_fourmeme_24h.sh  build_fourmeme_deployers_csv.py  build_kol_dataset.py  compute_deployer_reputation.py  deployer_reputation.py  enrich_full_dataset.py  filter_kol_count.py  gmgn_client.py  kol_dataset_schema.py  merge_kol_labeled_csv.py  run.sh  run_collector.sh  run_daily_labels.sh  run_live_dataset_collect.sh  run_paper_shadow_collect.sh
bsc-analyzer/services/: __init__.py  live_dataset_collector.py  paper_signal_gate.py
bsc-analyzer/src/: main.cpp
(+227 files in other folders)
